# phasefield_gps

./: .gitignore  README.md  pyproject.toml
docs/: my_defines.sty  notes.org  notes.tex  olivin.ipynb
examples/: olivin_RAse.py  olivin_anisotropy.py  temperature_olivin.py  test.ipynb
examples/one_grain_olivin/: faL_1373-2273-10.tab  fo_1373-2273-10.tab  one_grain_olivin.py
examples/two_grain_olivin/: fa_1373-2273-10.tab  foL_1373-2273-10.tab  two_grain_olivin.py
src/phasefield_gps/: __init__.py  component.py  gps.py  phase.py  utils.py
